objects/Credit_Card_Profile__c.object
<CustomObject>
    <description>Contains default settings for each credit card profile</description>
    <fields>
        <fullName>Age_Limit_Warning_Days__c</fullName>
        <label>zzzzzzAge Limit Warning Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Limit_Warning_Level__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Warning email sent to Card Owner if percent of available credit is below warning level</inlineHelpText>
        <label>zzzBalance Limit Warning Level</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cycle_Type__c</fullName>
        <inlineHelpText>Card Reset Cycle Type</inlineHelpText>
        <label>zzzCycle Type</label>
        <picklist>
            <picklistValues>
                <fullName>T - Never Reset</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>M - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W - Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzDescription</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>International_Purchasing_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comdata API - Internantional Purchasing Allowed

        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Non-US or CN</inlineHelpText>
        <label>zzzInternational Purchasing Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_Purchasing_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comdata API - Internet Purchasing Allowed

        Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzInternet Purchasing Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Cycle_Amount__c</fullName>
        <description>Comdata API - Maximum Cycle Amount

        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Total Spending Limit</inlineHelpText>
        <label>zzzCredit Limit Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Per_Day__c</fullName>
        <description>Comdata API - Maximum Amount Per Day

        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Spending Limit Per Day</inlineHelpText>
        <label>zzzMax Amount Per Day</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Per_Transaction__c</fullName>
        <description>Comdata API - Maximum Amount Per Transaction

        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Spending Limit Per Transaction</inlineHelpText>
        <label>zzzMax Amount Per Transaction</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Transaction_Age__c</fullName>
        <label>zzzMax Transaction Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Transactions_Per_Cycle__c</fullName>
        <label>zzzMax Transactions Per Cycle</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Transactions_Per_Day__c</fullName>
        <description>Comdata API - Maximum Number of Transactions Per Day

        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Limit on Number of Transactions Per Day</inlineHelpText>
        <label>zzzMax Transactions Per Day</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Use_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Card Balance is not replenished after use</inlineHelpText>
        <label>zzzOne Time Use Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Close_Flag__c</fullName>
        <inlineHelpText>Card Profile Limits setting</inlineHelpText>
        <label>zzzOpen/Close Flag</label>
        <picklist>
            <picklistValues>
                <fullName>O - Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>C - Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Available_Flag__c</fullName>
        <label>zzzProduct Available Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>IF(LEFT(TEXT(Cycle_Type__c),1) == &apos;T&apos;, &apos;10000&apos;, &apos;&apos;)</formula>
        <label>zzzProduct Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Group_Number__c</fullName>
        <description>Comdata API - Profile Value Number

        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Matches Profile Number sent to Comdata</inlineHelpText>
        <label>zzzProfile Group Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Comdata API - Description - Size limited by API

        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Descriptive name</inlineHelpText>
        <label>zzzProfile Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Age_Limit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Maximum number of days for a non-cleared posted transaction</inlineHelpText>
        <label>zzzTransaction Age Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>zzzCredit Card Profile</label>
    <nameField>
        <label>Profile Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zzzCredit Card Profiles</pluralLabel>
    <recordTypes>
        <fullName>ABC_Applicant</fullName>
        <active>false</active>
        <description>Profile for a Portfolio of cards for ABC Applicants</description>
        <label>ABC Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABC_Employee</fullName>
        <active>true</active>
        <description>Profile for a standard employee Portfolio</description>
        <label>ABC Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABC_Purchase_Request_Payment</fullName>
        <active>false</active>
        <description>Profile for a Portfolio of cards used for Purchase Request Payments</description>
        <label>ABC Purchase Request Payment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>